--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-session": "^1.15.1",
     "method-override": "^2.3.7",
     "morgan": "~1.7.0",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.3",
     "serve-favicon": "~2.3.2",
     "sqlite3": "^3.1.8"
