--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "morgan": "~1.7.0",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.30.3",
+    "sequelize": "^3.30.2",
     "sequelize-cli": "^2.6.0",
-    "serve-favicon": "~2.3.2",
+    "serve-favicon": "~2.3.2"
+  },
+  "devDependencies": {
     "sqlite3": "^3.1.8"
   }
 }
